refactor: prefer Java standard APIs